[package]
name = "rgb-ring-fw"
version = "0.0.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
smart-leds = "0.3.0"
ws2812-spi = "0.2.0"

[dependencies.stm32g0xx-hal]
default-features = false
features = ["rt", "stm32g07x"]
path = "../../hal/g0xx/"

[profile.dev]
incremental = false
codegen-units = 1
lto = true

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = false
